--- a/rrhh/templates/departamentos/agregar.html
+++ b/rrhh/templates/departamentos/agregar.html
@@ -1,4 +1,7 @@
-{% extends "base/base2.html" %}
+{% extends "base/base.html" %}
+{% block titulo %}
+  Nuevo Departamento
+{%endblock titulo%}
 {% block contenido %}
     <div class="card">
         <div class="card-header">
