--- a/rrhh/templates/departamentos/index.html
+++ b/rrhh/templates/departamentos/index.html
@@ -1,30 +1,65 @@
 {% extends "base/base.html" %}
+{% block titulo %}
+  Listado de Departamentos
+{%endblock titulo%}
 {% block contenido %}
-    <table id="departamentos" class="table table-striped" style="width:100%">
-        <thead>
-            <tr>
-              <th>Codigo</th>
-              <th>Nombre</th>
-            </tr>
-         </thead>
-        <tbody>
-          {% for depto in departamentos %}
-            <tr>
-                <td>{{depto.DeptoId}}</td>
-                <td>{{depto.DeptoNombre}}</td>
-            </tr>
-          {% endfor %}
-        </tbody>
-    </table>
+<div>
+  <a href="{% url 'departamentos_agregar' %}" class="btn btn-success">Nuevo departamento</a>
+</div>
+
+<div class="card">
+  <div class="card-header">
+      Listado de depatamentos
+  </div>  
+  <div class="card-body">
+      <table id="departamentos" class="table table-striped" style="width:100%">
+            <thead>
+                <tr>
+                  <th>Acciones</th>
+                  <th>Codigo</th>
+                  <th>Nombre</th>
+                </tr>
+            </thead>
+            <tbody>
+              {% for depto in departamentos %}
+                <tr>
+                    <td>
+                      <a href="{% url 'departamentos_editar' depto.DeptoId %}" class="btn btn-info">Editar</a>
+                      <a href="{% url 'departamentos_eliminar' depto.DeptoId %}" class="btn btn btn-danger">Eliminar</a>
+                    </td>
+                    <td>{{depto.DeptoId}}</td>
+                    <td>{{depto.DeptoNombre}}</td>
+                </tr>
+              {% endfor %}
+            </tbody>
+        </table>
+  </div>
+</div>
 {% endblock contenido %}
 
 
 {% block js_page%}
     
 <script>
-  $(document).ready(function () {
-    $('#departamentos').DataTable();
-  });
+  $(document).ready(function() {
+            $('#departamentos').DataTable( {
+        paging:true,
+        scrollY:true,
+        scrollX:true,
+        scrollCollapse:true,
+        pagingType: 'full_numbers',
+        dom: 'Blfrtip',
+        buttons: [
+            'copy', 'csv', 'excel', 'pdf', 'print'
+        ],
+        lengthMenu: [
+                        [ 10, 25, 50, -1 ],
+                        [ '10 Filas', '25 Filas ', '50 Filas', 'Mostrar todo' ]
+                    ],
+        "language": {
+            "url": "//cdn.datatables.net/plug-ins/1.12.1/i18n/es-ES.json"
+        }});
+        });
 
 </script>
 {% endblock js_page %}
